Add supporting html

--- a/public/index.pug
+++ b/public/index.pug
@@ -1,1 +1,9 @@
-svg#plotTarget
+html
+  head
+    title Meteorite Strikes by Size and Location
+    script(type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.js")
+    script(type="application/javascript" src="https://d3js.org/d3-scale.v0.6.js")
+    link(rel="stylesheet" href="index.css")
+  body
+    svg#plotTarget
+    script(type="application/javascript" src="index.js")
